--- a/cs-coupling-cohesion/cs-coupling-cohesion.csproj
+++ b/cs-coupling-cohesion/cs-coupling-cohesion.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{62C08362-E355-440C-8803-C681B8972F95}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>cs_coupling_cohesion</RootNamespace>
-    <AssemblyName>cs_coupling_cohesion</AssemblyName>
+    <AssemblyName>cs-coupling-cohesion</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
