regressed to Dictionary<(Type, Type)> ... which is unsatisfying and doens't give the right restrictions anyways

--- a/cs-generics/cs-generics.csproj
+++ b/cs-generics/cs-generics.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Generics.cs" />
-    <Compile Include="GenericsFood.cs" />
+    <Compile Include="GenericsFood_Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
