--- a/cs-polymorphsim/cs-polymorphsim.csproj
+++ b/cs-polymorphsim/cs-polymorphsim.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9D8EEAB2-97EF-4CBE-AA00-FD5C78861022}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>cs_polymorphsim</RootNamespace>
-    <AssemblyName>cs_polymorphsim</AssemblyName>
+    <AssemblyName>cs-polymorphsim</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,6 +34,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,11 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Polymorphism_PetWalker_Program.cs" />
+    <Compile Include="Polymorphism_Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
