--- a/cs-expando-object/cs-expando-object.csproj
+++ b/cs-expando-object/cs-expando-object.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9D8EEAB2-97EF-4CBE-AA00-FD5C78861022}</ProjectGuid>
+    <ProjectGuid>{178B714E-CDA1-422F-A790-D1E477BD3E06}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>cs_polymorphsim</RootNamespace>
-    <AssemblyName>cs-polymorphsim</AssemblyName>
+    <RootNamespace>cs_expando_object</RootNamespace>
+    <AssemblyName>cs-expando-object</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,9 +34,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,16 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Polymorphism_Main.cs" />
-    <Compile Include="Polymorphism_Pet_Walker.cs" />
-    <Compile Include="Polymorphism_Secret_Of_Mana.cs" />
-    <Compile Include="Polymorphism_Simpsons_Characters.cs" />
-    <Compile Include="Polymorphsim_Futurama.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
