--- a/cs-expando-object/cs-expando-object.csproj
+++ b/cs-expando-object/cs-expando-object.csproj
@@ -69,7 +69,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="import-dynamic\SomeSpecificCsv.txt" />
-    <Content Include="somtxt\sombl.txt" />
+    <Content Include="somtxt\sombl.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
