--- a/cs-lesson-leaky-abstraction-defence/cs-lesson-leaky-abstraction-defence.csproj
+++ b/cs-lesson-leaky-abstraction-defence/cs-lesson-leaky-abstraction-defence.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D71C9D99-225F-4454-9538-6B6F67D5C859}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>cs_lesson_leaky_abstraction_defence</RootNamespace>
-    <AssemblyName>cs_lesson_leaky_abstraction_defence</AssemblyName>
+    <AssemblyName>cs-lesson-leaky-abstraction-defence</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\cs-events-delegates-ohmy\cs-events-delegates-ohmy.csproj">
+      <Project>{fc86d88c-f5ef-4fe4-9ff6-c7cb9989fe08}</Project>
+      <Name>cs-events-delegates-ohmy</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
