duplicated Person into lesson project. removed references to other project

--- a/cs-lesson-leaky-abstraction-defence/cs-lesson-leaky-abstraction-defence.csproj
+++ b/cs-lesson-leaky-abstraction-defence/cs-lesson-leaky-abstraction-defence.csproj
@@ -42,17 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\cs-events-delegates-ohmy\cs-events-delegates-ohmy.csproj">
-      <Project>{fc86d88c-f5ef-4fe4-9ff6-c7cb9989fe08}</Project>
-      <Name>cs-events-delegates-ohmy</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
