--- a/cs-events-delegates-ohmy/cs-events-delegates-ohmy.csproj
+++ b/cs-events-delegates-ohmy/cs-events-delegates-ohmy.csproj
@@ -42,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Person.cs" />
+    <Compile Include="Attempt2.cs" />
+    <Compile Include="Attempt1_Gym.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
   </ItemGroup>
