--- a/cs-events-scheduler/cs-events-scheduler.csproj
+++ b/cs-events-scheduler/cs-events-scheduler.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{256994AB-6C64-4E6C-B122-E88590A4149F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>cs_events_scheduler</RootNamespace>
-    <AssemblyName>cs_events_scheduler</AssemblyName>
+    <AssemblyName>cs-events-scheduler</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Scheduler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
