missing Bookable.cs and missing Angel.cs files all along...
ok whatever

--- a/cs-generics/cs-generics.csproj
+++ b/cs-generics/cs-generics.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Generics_Angel.cs" />
+    <Compile Include="Generics_Bookable.cs" />
     <Compile Include="Generics_Flyable.cs" />
     <Compile Include="Generics_Food.cs" />
     <Compile Include="Generics_Kittens.cs" />
